--- a/DuAnTotNghiep/DuAnTotNghiep.csproj
+++ b/DuAnTotNghiep/DuAnTotNghiep.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Filters\" />
+    <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
 </Project>
